# nullapk

./: .gitignore  README.md  pyproject.toml
nullapk/: __main__.py  cli.py  dispenser.py  downloader.py  errors.py  pipeline.py  playstore.py  tui.py  tui.tcss
nullapk/profiles/: pixel3a.json
