[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nullapk"
version = "1.0.0"
description = "Fetch Google Play APKs from a Play Store link via Aurora Store's anonymous dispenser"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.58",
    "rich>=13",
    "requests>=2.31",
]

[project.scripts]
nullapk = "nullapk.cli:main"

[tool.setuptools.packages.find]
include = ["nullapk*"]

[tool.setuptools.package-data]
nullapk = ["profiles/*.json", "tui.tcss"]
